<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/settings"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextLogin" />

    <TextView
        android:id="@+id/textViewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pass"
        app:layout_constraintEnd_toEndOf="@+id/textViewLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

    <TextView
        android:id="@+id/textViewServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/server"
        app:layout_constraintEnd_toEndOf="@+id/textViewPass"
        app:layout_constraintTop_toTopOf="@+id/editTextServer" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="12"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/def_login"
        app:layout_constraintStart_toEndOf="@+id/textViewLogin"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="12"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/def_pass"
        app:layout_constraintStart_toStartOf="@+id/editTextLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="12"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/def_server"
        app:layout_constraintStart_toStartOf="@+id/editTextPass"
        app:layout_constraintTop_toBottomOf="@+id/editTextPass"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/buttonSave"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@android:string/yes"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextServer"
        app:layout_constraintTop_toBottomOf="@+id/editTextServer"
        app:srcCompat="@drawable/ic_save" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="52dp"
        android:clickable="true"
        android:contentDescription="@android:string/yes"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_save" />

</androidx.constraintlayout.widget.ConstraintLayout>